fixed the spacing issue b/w profile pic and about text

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-.App {
+.App{
   text-align: center;
 }
+
 
 .App-header {
   background-color: #282c34;
@@ -83,10 +84,11 @@
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap-reverse;
+  font-size: 30px;
   /* padding: 25px; */
-  width: 400px;
-  margin-left: 150px;
-  /* margin-top: 50px; */
+  width: 600px;
+  margin-left: 10%;
+  margin-top: 50px;
   /* border-radius: 5px;
   box-shadow: inset 0 0 rgba(255, 255, 255, 0.6),
     0 22px 70px 4px rgba(0, 0, 0, 0.30), 0 0 0 1px rgba(0, 0, 0, 0.3); */
@@ -94,12 +96,19 @@
 }
 
 .profilePic {
-  display: flex;
-  flex-wrap: wrap-reverse;
-  /* margin-left: 450px; */
-  width: 400px;
+  /* display: flex; */
+  /* flex-wrap: wrap-reverse; */
+  margin-left: 50%;
+  width: 600px;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6),
     0 22px 70px 4px rgba(0, 0, 0, 0.30), 0 0 0 1px rgba(0, 0, 0, 0.3);
-  float: right;
-  margin-top: 50%;
+  /* float: right; */
+  /* margin-top: 50%; */
+}
+
+@media only profilePic and (max-width: 600px) {
+  body {
+    display: flex;
+    align-items: center;
+  }
 }
